# psique-ai

./: .dockerignore  .env.example  .gitignore  AUDITORIA.md  CLAUDE.md  Dockerfile  README.md  check_consultations.py  check_heitor_appt.py  check_heitor_events.py  check_jul9.py  check_orphan_rescheduled.py  check_patient.py  check_rescheduled_today.py  delete_heitor_calendar_event.py  fix_heitor_status.py  pyproject.toml  status_all_rescheduled_today.py  status_heitor.py  status_heitor_detailed.py
app/: auth.py  buffer.py  chatwoot.py  database.py  dates.py  email_sender.py  google_calendar.py  google_drive.py  google_sheets.py  main.py  media.py  patients.py  uazapi.py  utils.py  whatsapp.py
dashboard/: Dockerfile  attendant_db.py  attendant_routes.py  chatwoot_client.py  db_client.py  main.py  payments.py  pyproject.toml  return_reminders.py
docs/: horizons-prompt.md  roadmap-medx-parity.md  whatsapp-templates.md
landing/: index.html
scripts/: _add_joao_pedro_self.py  _apologize_cecilia.py  _apologize_sayonara.py  _audit_all_threads_orphaned_calls.py  _audit_attendant_panel_payments.py  _audit_fork_timing.py  _audit_incomplete_detail.py  _audit_missing_sheet_payments.py  _audit_patient_contact_roles.py  _audit_phone_thread_forks.py  _audit_phone_thread_forks_detail.py  _backfill_isaac_receipt_message.py  _backfill_missing_payment_rows.py  _block_julio_06jul_bruna_24jul.py  _block_julio_15jun.py  _block_julio_23jun.py  _book_flavia_30jul.py  _book_vicente_30jun.py  _cadastrar_carla_spinelli.py  _cadastrar_joao_pedro.py  _cancel_25jun_cecilia.py  _check_06jul.py  (+358 more)
(+105 files in other folders)
