[project]
name = "psique-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-openai>=1.1.11",
    "langfuse>=2.0.0",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
    "supabase==2.28.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
